# rust-lambda

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cdk-deploy.yml
cdk/: package-lock.json  package.json
cdk/lib/: cdk-stack.ts
deployment/: Deploy.ts  Stack.ts  cdk.json  package-lock.json  package.json  tsconfig.json
src/: main.rs
src/handlers/: create_user_handler.rs  get_user_handler.rs  mod.rs
src/models/: user.rs
