[package]
name = "rust-lambda"
version = "0.1.0"
authors = ["Michael Blydenburgh"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.6.0"
aws-sdk-dynamodb = "0.6.0"
tokio = { version = "1", features = ["full"] }
lambda_runtime = "0.4.1"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.78"
log = "0.4.0"
uuid = { version = "0.8.2", features = ["v4"]}